--- a/Subscription/src/main/resources/application.yml
+++ b/Subscription/src/main/resources/application.yml
@@ -6,24 +6,32 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/subscriptiondb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-    username: root            # 🔹 use your MySQL username
-    password: Ranad@06uS1cS7&e          # 🔹 use your MySQL password
+    username: root
+    password: Ranad@06uS1cS7&e
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update        # ✅ auto-creates table if not exist
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+
+  kafka:                              # 🧩 Kafka configuration starts here
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    properties:
+      spring.json.add.type.headers: false
 
 server:
   port: 8081
 
 management:
   tracing:
-    enabled: false             # 🚫 Disable Zipkin & tracing completely
+    enabled: false
   endpoints:
     web:
       exposure:
@@ -41,12 +49,12 @@ logging:
       max-history: 10
   file:
     name: logs/subscription.log
+  level:
     root: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     com.practice.Subscription.convertor.EncryptionConverter: DEBUG
     com.practice.Subscription.service.SubscriptionServiceImpl: DEBUG
-
 
 customer:
   service:
